rust/bindings/adbc.rs

#[test]
fn bindgen_test_layout_ArrowArrayStream() {
    const UNINIT: ::std::mem::MaybeUninit<ArrowArrayStream> = ::std::mem::MaybeUninit::uninit();
    let ptr = UNINIT.as_ptr();
    assert_eq!(
        ::std::mem::size_of::<ArrowArrayStream>(),
        40usize,
        concat!("Size of: ", stringify!(ArrowArrayStream)),
    );
    assert_eq!(
        ::std::mem::align_of::<ArrowArrayStream>(),
        8usize,
        concat!("Alignment of ", stringify!(ArrowArrayStream)),
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).get_schema) as usize - ptr as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(ArrowArrayStream),
            "::",
            stringify!(get_schema),
        ),
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).get_next) as usize - ptr as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(ArrowArrayStream),
            "::",
            stringify!(get_next),
        ),
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).get_last_error) as usize - ptr as usize },
        16usize,
        concat!(
            "Offset of field: ",
            stringify!(ArrowArrayStream),
            "::",
            stringify!(get_last_error),
        ),
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).release) as usize - ptr as usize },
        24usize,
        concat!(
            "Offset of field: ",
            stringify!(ArrowArrayStream),
            "::",
            stringify!(release),
        ),
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).private_data) as usize - ptr as usize },
        32usize,
        concat!(
            "Offset of field: ",
            stringify!(ArrowArrayStream),
            "::",
            stringify!(private_data),
        ),
    );
}
///Error codes for operations that may fail.
pub type AdbcStatusCode = u8;
/**A detailed error message for an operation.

 The caller must zero-initialize this struct (clarified in ADBC 1.1.0).

 The structure was extended in ADBC 1.1.0. Drivers and clients using ADBC
 1.0.0 will not have the private_data or private_driver fields. Drivers
 should read/write these fields if and only if vendor_code is equal to
 ADBC_ERROR_VENDOR_CODE_PRIVATE_DATA. Clients are required to initialize
 this struct to avoid the possibility of uninitialized values confusing the
 driver.*/
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct AdbcError {
    ///The error message.
    pub message: *mut ::std::os::raw::c_char,
    ///A vendor-specific error code, if applicable.
    pub vendor_code: i32,
    /**A SQLSTATE error code, if provided, as defined by the
 SQL:2003 standard. If not set, it should be set to
 "*/
    pub sqlstate: [::std::os::raw::c_char; 5usize],
    /**Release the contained error.

 Unlike other structures, this is an embedded callback to make it
 easier for the driver manager and driver to cooperate.*/
    pub release: ::std::option::Option<unsafe extern "C" fn(error: *mut AdbcError)>,
    /**Opaque implementation-defined state.

 This field may not be used unless vendor_code is
 ADBC_ERROR_VENDOR_CODE_PRIVATE_DATA. If present, this field is NULLPTR
 iff the error is unintialized/freed.

 > Available since: ADBC API revision 1.1.0*/
    pub private_data: *mut ::std::os::raw::c_void,
    /**The associated driver (used by the driver manager to help
 track state).

 This field may not be used unless vendor_code is
 ADBC_ERROR_VENDOR_CODE_PRIVATE_DATA.

 > Available since: ADBC API revision 1.1.0*/
    pub private_driver: *mut AdbcDriver,
}
#[test]
fn bindgen_test_layout_AdbcError() {
    const UNINIT: ::std::mem::MaybeUninit<AdbcError> = ::std::mem::MaybeUninit::uninit();
    let ptr = UNINIT.as_ptr();
    assert_eq!(
        ::std::mem::size_of::<AdbcError>(),
        48usize,
        concat!("Size of: ", stringify!(AdbcError)),
    );
    assert_eq!(
        ::std::mem::align_of::<AdbcError>(),
        8usize,
        concat!("Alignment of ", stringify!(AdbcError)),
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).message) as usize - ptr as usize },
        0usize,
        concat!("Offset of field: ", stringify!(AdbcError), "::", stringify!(message)),
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).vendor_code) as usize - ptr as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(AdbcError),
            "::",
            stringify!(vendor_code),
        ),
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).sqlstate) as usize - ptr as usize },
        12usize,
        concat!("Offset of field: ", stringify!(AdbcError), "::", stringify!(sqlstate)),
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).release) as usize - ptr as usize },
        24usize,
        concat!("Offset of field: ", stringify!(AdbcError), "::", stringify!(release)),
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).private_data) as usize - ptr as usize },
        32usize,
        concat!(
            "Offset of field: ",
            stringify!(AdbcError),
            "::",
            stringify!(private_data),
        ),
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).private_driver) as usize - ptr as usize },
        40usize,
        concat!(
            "Offset of field: ",
            stringify!(AdbcError),
            "::",
            stringify!(private_driver),
        ),
    );
}
/**Extra key-value metadata for an error.

 The fields here are owned by the driver and should not be freed. The
 fields here are invalidated when the release callback in AdbcError is
 called.

 > Available since: ADBC API revision 1.1.0*/
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct AdbcErrorDetail {
    ///The metadata key.
    pub key: *const ::std::os::raw::c_char,
    ///The binary metadata value.
    pub value: *const u8,
    ///The length of the metadata value.
    pub value_length: usize,
}
#[test]
fn bindgen_test_layout_AdbcErrorDetail() {
    const UNINIT: ::std::mem::MaybeUninit<AdbcErrorDetail> = ::std::mem::MaybeUninit::uninit();
    let ptr = UNINIT.as_ptr();
    assert_eq!(
        ::std::mem::size_of::<AdbcErrorDetail>(),
        24usize,
        concat!("Size of: ", stringify!(AdbcErrorDetail)),
    );
    assert_eq!(
        ::std::mem::align_of::<AdbcErrorDetail>(),
        8usize,
        concat!("Alignment of ", stringify!(AdbcErrorDetail)),
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).key) as usize - ptr as usize },
        0usize,
        concat!("Offset of field: ", stringify!(AdbcErrorDetail), "::", stringify!(key)),
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).value) as usize - ptr as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(AdbcErrorDetail),
            "::",
            stringify!(value),
        ),
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).value_length) as usize - ptr as usize },
        16usize,
        concat!(
            "Offset of field: ",
            stringify!(AdbcErrorDetail),
            "::",
            stringify!(value_length),
        ),
    );
}
extern "C" {
    /**Get the number of metadata values available in an error.

 > Available since: ADBC API revision 1.1.0*/
    pub fn AdbcErrorGetDetailCount(error: *const AdbcError) -> ::std::os::raw::c_int;
}
extern "C" {
    /**Get a metadata value in an error by index.

 If index is invalid, returns an AdbcErrorDetail initialized with NULL/0
 fields.

 > Available since: ADBC API revision 1.1.0*/
    pub fn AdbcErrorGetDetail(
        error: *const AdbcError,
        index: ::std::os::raw::c_int,
    ) -> AdbcErrorDetail;
}
extern "C" {
    /**Get an ADBC error from an ArrowArrayStream created by a driver.

 This allows retrieving error details and other metadata that would
 normally be suppressed by the Arrow C Stream Interface.

 The caller MUST NOT release the error; it is managed by the release
 callback in the stream itself.

 # Arguments

* `stream` (direction in) - The stream to query.
 * `status` (direction out) - The ADBC status code, or ADBC_STATUS_OK if there is no
 error. Not written to if the stream does not contain an ADBC error or
 if the pointer is NULL.
 # Returns

NULL if not supported.
 > Available since: ADBC API revision 1.1.0*/
    pub fn AdbcErrorFromArrayStream(
        stream: *mut ArrowArrayStream,
        status: *mut AdbcStatusCode,
    ) -> *const AdbcError;
}
/**An instance of a database.

 Must be kept alive as long as any connections exist.*/
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct AdbcDatabase {
    /**Opaque implementation-defined state.
 This field is NULLPTR iff the connection is unintialized/freed.*/
    pub private_data: *mut ::std::os::raw::c_void,
    /**The associated driver (used by the driver manager to help
 track state).*/
    pub private_driver: *mut AdbcDriver,
}
#[test]
fn bindgen_test_layout_AdbcDatabase() {
    const UNINIT: ::std::mem::MaybeUninit<AdbcDatabase> = ::std::mem::MaybeUninit::uninit();
    let ptr = UNINIT.as_ptr();
    assert_eq!(
        ::std::mem::size_of::<AdbcDatabase>(),
        16usize,
        concat!("Size of: ", stringify!(AdbcDatabase)),
    );
    assert_eq!(
        ::std::mem::align_of::<AdbcDatabase>(),
        8usize,
        concat!("Alignment of ", stringify!(AdbcDatabase)),
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).private_data) as usize - ptr as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(AdbcDatabase),
            "::",
            stringify!(private_data),
        ),
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).private_driver) as usize - ptr as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(AdbcDatabase),
            "::",
            stringify!(private_driver),
        ),
    );
}
/**An active database connection.

 Provides methods for query execution, managing prepared
 statements, using transactions, and so on.

 Connections are not required to be thread-safe, but they can be
 used from multiple threads so long as clients take care to
 serialize accesses to a connection.*/
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct AdbcConnection {
    /**Opaque implementation-defined state.
 This field is NULLPTR iff the connection is unintialized/freed.*/
    pub private_data: *mut ::std::os::raw::c_void,
    /**The associated driver (used by the driver manager to help
 track state).*/
    pub private_driver: *mut AdbcDriver,
}
#[test]
fn bindgen_test_layout_AdbcConnection() {
    const UNINIT: ::std::mem::MaybeUninit<AdbcConnection> = ::std::mem::MaybeUninit::uninit();
    let ptr = UNINIT.as_ptr();
    assert_eq!(
        ::std::mem::size_of::<AdbcConnection>(),
        16usize,
        concat!("Size of: ", stringify!(AdbcConnection)),
    );
    assert_eq!(
        ::std::mem::align_of::<AdbcConnection>(),
        8usize,
        concat!("Alignment of ", stringify!(AdbcConnection)),
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).private_data) as usize - ptr as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(AdbcConnection),
            "::",
            stringify!(private_data),
        ),
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).private_driver) as usize - ptr as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(AdbcConnection),
            "::",
            stringify!(private_driver),
        ),
    );
}
/**A container for all state needed to execute a database
 query, such as the query itself, parameters for prepared
 statements, driver parameters, etc.
